Redesign bio page layout, rename list thumbnail field, update docs/rules
- Bio page: fixed-height no-scroll viewport, two-column landscape layout
  (left: hero + thumbs + history; right: header + care/species panels),
  absolute back link, internal panel scrolling, history input pinned to bottom
- List thumbnail: use originalImage (ORIGINAL_UPLOAD) instead of
  healthyReferenceImage (HEALTHY_REFERENCE) in DTO, query, mapper, and frontend types
- README: updated DB migrations count (7→10), added UI Layout section
- Cursor rules: added PlantListItemResponse contract (backend-specialist),
  added List Page Image Rules (frontend-specialist)